<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="64dp"
    android:padding="24dp"
    android:id="@+id/content_carrinho">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/title_content_paymentMethod"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rbCarrinhoDinheiro"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbCarrinhoDinheiro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_dinheiro" />

                <RadioButton
                    android:id="@+id/rbCarrinhoCartao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_cartao" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tx_observacao"
                app:helperText="@string/helper_opcional"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txCarrinhoObservacao"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/roundex_textfield"
                    android:paddingLeft="12dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/recycler_view_container"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/recycler_view_header"
                    android:text="@string/recycler_view_carrinho" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPratosPedido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnCarrinhoConfirmarPedido"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/btn_confirmar_pedido" />

                <Button
                    android:id="@+id/btnCarrinhoCancelarPedido"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/btn_cancelar_pedido" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>