<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".activity.CadastroActivity"
    tools:showIn="@layout/activity_cadastro">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center">

        <View
            android:layout_width="8dp"
            android:layout_height="32dp"
            android:layout_marginRight="12dp"
            android:background="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/titulo_content_cadastro"
            android:textFontWeight="600"
            android:textSize="24sp" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txCadastroEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tx_email"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundex_textfield" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txCadastroSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tx_senha"
        app:startIconDrawable="@drawable/ic_password">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundex_textfield" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txCadastroConfirmarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tx_confirmar_senha"
        app:startIconDrawable="@drawable/ic_password">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundex_textfield" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnCadastro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_cadastro" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPossuiConta"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/acao_possui_conta"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>