<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context="com.example.alfred.activity.MinhaContaActivity"
    tools:showIn="@layout/activity_minha_conta">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/titulo_content_minha_conta"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/tx_senha_atual">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txSenhaAtual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/roundex_textfield"
                android:paddingStart="12dp"
                android:paddingLeft="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center">

        <View
            android:layout_width="24dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/tx_nova_senha">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txNovaSenha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/roundex_textfield"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center">

        <View
            android:layout_width="24dp"
            android:layout_height="20dp"
            android:layout_marginRight="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/tx_confirmar_nova_senha">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txConfirmarNovaSenha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/roundex_textfield"
                android:paddingLeft="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMinhaContaCancelar"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btn_cancelar" />

        <Button
            android:id="@+id/btnMinhaContaSalvar"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btn_salvar" />

    </LinearLayout>
</LinearLayout>