<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/content_meus_pedidos"
    android:paddingVertical="24dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="24dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/titulo_content_meus_pedidos"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/recycler_view_container"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/recycler_view_header"
                    android:text="@string/recycler_view_pedidos_em_analise" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvEmAnalise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/recycler_view_container"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/recycler_view_header"
                    android:text="@string/recycler_view_pedidos_aprovados" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAprovado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/recycler_view_container"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/recycler_view_header"
                    android:text="@string/recycler_view_pedidos_negados" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvNegado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="20dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/fragment_dialog_avaliacao" />

</LinearLayout>